--- a/netlify.toml
+++ b/netlify.toml
@@ -21,7 +21,7 @@
     Permissions-Policy = "camera=(), microphone=(), geolocation=(), payment=(), usb=(), interest-cohort=()"
 
     # Content Security Policy — only allow trusted sources
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://cdn.tailwindcss.com https://unpkg.com https://www.youtube.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://github.com https://avatars.githubusercontent.com; frame-src https://www.youtube.com https://www.youtube-nocookie.com; connect-src 'self' https://github-contributions-api.jogruber.de https://api.github.com https://www.google-analytics.com https://region1.google-analytics.com; object-src 'none'; base-uri 'self'; form-action 'self';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://cdn.tailwindcss.com https://unpkg.com https://www.youtube.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://github.com https://avatars.githubusercontent.com https://cdn.jsdelivr.net https://raw.githubusercontent.com; frame-src https://www.youtube.com https://www.youtube-nocookie.com; connect-src 'self' https://github-contributions-api.jogruber.de https://api.github.com https://www.google-analytics.com https://region1.google-analytics.com; object-src 'none'; base-uri 'self'; form-action 'self';"
 
     # Prevent cross-origin attacks
     Cross-Origin-Opener-Policy = "same-origin-allow-popups"
