fix: self-host Tailwind CSS and Lucide icons - eliminate CDN failures on mobile

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .netlify/
+node_modules/
+tw-input.css
+tailwind.config.js
+package.json
+package-lock.json
+# built files are committed intentionally (css/tailwind.css, js/lucide.min.js)
