perf: major mobile scroll optimization - disable blur/animations on mobile, skip touch effects

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ tailwind.config.js
 package.json
 package-lock.json
 # built files are committed intentionally (css/tailwind.css, js/lucide.min.js)
+.vercel
